# Autops

./: .env.example  .gitignore  CODEBUDDY.md  Learn_DeepAgents.md  README.md  langgraph.json  pyproject.toml
example/: approval.go  bot.go  reporter.go
src/autops/: __init__.py
src/autops/agents/: __init__.py  main_agent.py
src/autops/channels/: __init__.py  cli.py
src/autops/channels/feishu/: __init__.py  bot.py  client.py  reporter.py
src/autops/config/: __init__.py  settings.py
src/autops/llm/: __init__.py  client.py
src/autops/middleware/: __init__.py  memory.py  safety.py
src/autops/observability/: __init__.py  handler.py  sink.py
src/autops/prompts/: __init__.py  renderer.py  system.py
src/autops/prompts/templates/: main_agent.j2
src/autops/rag/: __init__.py  client.py  tools.py
src/autops/store/: __init__.py  episodic.py  procedural.py  semantic.py
src/autops/tools/: __init__.py  dangerous_commands.py  search.py  virtual_execute.py
