[project]
name = "autops"
version = "0.1.0"
description = "基于 Deepagents 框架的 SRE/DevOps AI Agent 智能体"
readme = "README.md"
authors = [
    { name = "Gordon", email = "gaoxiong722@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "jinja2>=3.1.6",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "lark-oapi>=1.7.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
]

[project.scripts]
autops = "autops:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "pytest>=8.0",
    "langgraph-cli[inmem]>=0.4.31",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
